--- a/config/locales/views/trips/en.yml
+++ b/config/locales/views/trips/en.yml
@@ -12,6 +12,7 @@ en:
         all_trips_update: All Trips Update
     form_new:
       add_stopover: Add Stopover
+      description: insert the cities, passing time and date 
       route: Route
       title: New trip form
     index:
