--- a/config/locales/views/vehicles/en.yml
+++ b/config/locales/views/vehicles/en.yml
@@ -12,3 +12,5 @@ en:
       edit_car_detail_btn: Update Car Details
       enter_car_detail_btn: Enter Your Car Details
       there_is_no_car_registered: There is no data for car.
+      vehicle_brand: Make
+      vehicle_model: Model
