--- a/config/locales/views/vehicles/fa.yml
+++ b/config/locales/views/vehicles/fa.yml
@@ -12,3 +12,5 @@ fa:
       edit_car_detail_btn: بروزرسانی مشخصات خودرو
       enter_car_detail_btn: صفحه ثبت مشخصات خودرو
       there_is_no_car_registered: مشخصات خودرو ثبت نشده است
+      vehicle_brand: برند
+      vehicle_model: مدل
