add list on network in netvorks show ans add description to that

--- a/config/locales/general/fa.yml
+++ b/config/locales/general/fa.yml
@@ -113,6 +113,6 @@ fa:
     d6: شنبه
 
   will_paginate:
-    previous_label: " قبلی >>"
-    next_label: "<< بعدی"
+    previous_label: " قبلی"
+    next_label: "بعدی"
     page_gap: "&hellip;"
